--- a/views/pages/cancelled.ejs
+++ b/views/pages/cancelled.ejs
@@ -23,6 +23,14 @@
 
             <ul class="space-y-2 font-medium">
                 <li>
+                    <a href="/bookings"
+                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+                        <i class="ri-dashboard-line"></i>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Dashboard</span>
+                    </a>
+                </li>
+
+                <li>
                     <a href="#"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <i class="ri-line-chart-line"></i>
